<resources>
    <string name="app_name">EduGame</string>
    <string name="button_play">PLAY</string>
    <string name="button_results">RESULTS</string>
    <string name="button_easy">EASY</string>
    <string name="button_medium">MEDIUM</string>
    <string name="button_hard">HARD</string>
    <string name="title_activity_game_difficulty">GameDifficultyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_30sec">30 SECONDS</string>
    <string name="button_1min">1 MINUTE</string>
    <string name="button_2min">2 MINUTES</string>
    <string name="button_new_game">NEW GAME</string>
    <string name="button_home">HOME</string>
    <string name="button_exit">EXIT</string>
</resources>